--- a/templates/register.html
+++ b/templates/register.html
@@ -2,10 +2,16 @@
 
 {% block content %}
     <h2>Register</h2>
-    <form method="POST">
-        <input type="text" name="username" placeholder="Username" required><br>
-        <input type="password" name="password" placeholder="Password" required><br>
-        <button type="submit">Register</button>
+    <form method="POST" class="mt-3">
+        {% csrf_token %}
+        <div class="form-group mb-3">
+            <input type="text" name="username" class="form-control" placeholder="Username" required>
+        </div>
+        <div class="form-group mb-3">
+            <input type="password" name="password" class="form-control" placeholder="Password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
     </form>
-    <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
+    <p class="mt-3">Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
 {% endblock %}
+
